add new fixes
